# genomde-dk-validator

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/genomde_dk_validator/: __init__.py  cli.py  invariants.py  rules.py  validator.py
src/genomde_dk_validator/rules/: grz.invariants.json  grz.rules.json  kdk.invariants.json  kdk.rules.json
src/genomde_dk_validator/schemas/: PROVENANCE.md
src/genomde_dk_validator/schemas/grz/: CHANGELOG.md  grz-schema.json
src/genomde_dk_validator/schemas/kdk/: CHANGELOG.md  Oncology.json  OncologyCase.json  OncologyFollowUp.json  OncologyMolecular.json  OncologyPlan.json  RareDiseases.json  RareDiseasesCase.json  RareDiseasesFollowUp.json  RareDiseasesMolecular.json  RareDiseasesPlan.json  Submission.json
src/genomde_dk_validator/schemas/kdk/data-types/: Coding.json  Identifier.json  Substance.json
tests/: test_validator.py
tests/fixtures/: grz_valid.json  oncology_valid.json
